--- a/index.html
+++ b/index.html
@@ -89,40 +89,56 @@
 							<div class="media__title title">News & Media</div>
 						</div>
 						<div class="media__header-column">
-							<a href="" class="media__radio">News</a>
-							<a href="" class="media__radio">Press Release</a>
-							<a href="" class="media__radio">All</a>
+							<a href="" class="media__category">News</a>
+							<a href="" class="media__category">Press Release</a>
+							<a href="" class="media__category">All</a>
 						</div>
 					</div>
 					<div class="media__body">
 						<div class="media__column">
 							<div class="media__item item-media">
-								<div class="item-media__radio">Press Release</div>
-								<a class="item-media__image"><img src="images/Media/img1.jpg" alt="">
-									<a class="item-media__title">increases existing loan facilities</a>
-								</a>
-								<div class="item-media__text">On May 5, 2017 the 4th tranche under the Recurring Credit Facility which has with DNB Bank ASA and Nordea Bank AS was made available to the company.</div>
-								<a href="" class="item-media__link">Read More</a>
+								<div class="item-media__content">
+									<div class="item-media__background-image item-media__background-image--1 bluebg ibg"><img src="images/Media/img1.jpg" alt=""></div>
+									<div class="item-media__content-figure">
+										<a class="item-media__category">Press Release</a>
+										<a class="item-media__title">increases existing loan facilities</a>
+									</div>
+								</div>
+								<div class="item-media__content-figcaption">
+									<div class="item-media__text">On May 5, 2017 the 4th tranche under the Recurring Credit Facility which has with DNB Bank ASA and Nordea Bank AS was made available to the company. On May 5, 2017 the 4th tranche under the Recurring Credit Facility which has with DNB Bank ASA
+										and Nordea Bank AS was made available to the company.</div>
+									<a href="" class="item-media__link">Read More</a>
+								</div>
 							</div>
 						</div>
 						<div class="media__column">
 							<div class="media__item item-media">
-								<div class="item-media__radio">News</div>
-								<a class="item-media__image"><img src="images/Media/img2.jpg" alt="">
-									<a class="item-media__title">acquires another primary portfolio in spain</a>
-								</a>
-								<div class="item-media__text">On May 5, 2017 the 4th tranche under the Recurring Credit Facility which has with DNB Bank ASA and Nordea Bank AS was made available to the company.</div>
-								<a href="" class="item-media__link">Read More</a>
+								<div class="item-media__content">
+									<div class="item-media__background-image item-media__background-image--2  bluebg ibg"><img src="images/Media/img2.jpg" alt=""></div>
+									<div class="item-media__content-figure">
+										<a class="item-media__category">Press Release</a>
+										<a class="item-media__title">increases existing loan facilities</a>
+									</div>
+								</div>
+								<div class="item-media__content-figcaption">
+									<div class="item-media__text">On May 5, 2017 the 4th tranche under the Recurring Credit Facility which has with DNB Bank ASA and Nordea Bank AS was made available to the company.</div>
+									<a href="" class="item-media__link">Read More</a>
+								</div>
 							</div>
 						</div>
 						<div class="media__column">
 							<div class="media__item item-media">
-								<div class="item-media__radio">Press Release</div>
-								<a class="item-media__image"><img src="images/Media/img3.jpg" alt="">
-									<a class="item-media__title">increases existing loan facilities</a>
-								</a>
-								<div class="item-media__text">On May 5, 2017 the 4th tranche under the Recurring Credit Facility which has with DNB Bank ASA and Nordea Bank AS was made available to the company.</div>
-								<a href="" class="item-media__link">Read More</a>
+								<div class="item-media__content">
+									<div class="item-media__background-image item-media__background-image--3 ibg bluebg"><img src="images/Media/img3.jpg" alt=""></div>
+									<div class="item-media__content-figure">
+										<a class="item-media__category">Press Release</a>
+										<a class="item-media__title">increases existing loan facilities</a>
+									</div>
+								</div>
+								<div class="item-media__content-figcaption">
+									<div class="item-media__text">On May 5, 2017 the 4th tranche under the Recurring Credit Facility which has with DNB Bank ASA and Nordea Bank AS was made available to the company.</div>
+									<a href="" class="item-media__link">Read More</a>
+								</div>
 							</div>
 						</div>
 					</div>
