--- a/index.html
+++ b/index.html
@@ -143,17 +143,26 @@
 						</div>
 					</div>
 				</section>
-
+				<section class="country">
+					<div class="country__title title">Learn more about Us in your country</div>
+					<div class="country__map" id="map"><img src="images/country/img1.jpg" alt=""></div>
+				</section>
 			</main>
 
 			<footer class="footer">
-
+				<div class="footer__body">
+					<a class="footer__company text-footer">Business 2017</a>
+					<a class="footer__terms text-footer">Terms & Conditions</a>
+					<a class="footer__privacy-policy text-footer">Privacy Policy</a>
+				</div>
 			</footer>
 
 		</div>
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 		<!-- Задает классы Active при нажатии на меню-бургер. -->
 		<script src="js/script.js"></script>
+		<!-- Подключение карты требует key, то есть ключа лицензии. Выводим без ключа в демо-режиме. Ключ бесплатный, но имеет лимиты, поэтому не могу светить.-->
+		<script src="https://google.com/maps/api/js?sensor=false&amp;key="></script>
 	</div>
 </body>
 
